# parser_gfxhub

./: Dockerfile  app.py  draft.main.py  exceptions.py  main.py  pyproject.toml  requirements.txt
extra_utils/: get_delta_of_two_files.py  get_downloaded_archives_list.py  get_size_of_file.py  split_file_by_items_count.py  split_file_by_size.py
gfxHUB_spider/: __init__.py  app.py  result_10.json  result_11.json  result_12.json  result_13.json  result_8.json  result_9.json  result_scraper_gfxHUB.json  result_scraper_gfxHUB_2.json  result_scraper_gfxHUB_3.json  result_scraper_yo_3__1.json  result_scraper_yo_3__10.json  result_scraper_yo_3__11.json  result_scraper_yo_3__12.json  result_scraper_yo_3__13.json  result_scraper_yo_3__14.json  result_scraper_yo_3__15.json  result_scraper_yo_3__16.json  result_scraper_yo_3__17.json  result_scraper_yo_3__19.json  result_scraper_yo_3__4.json  result_scraper_yo_3__5.json  result_scraper_yo_3__6.json  result_scraper_yo_3__7.json  result_scraper_yo_3__8.json  result_scraper_yo_3__9.json  scrapy.cfg
gfxHUB_spider/gfxHUB_spider/: items.py  settings.py
gfxHUB_spider/gfxHUB_spider/spiders/: gfxHub2_spider.py  testScraper_spider.py  testScraper_spider_to_work_with_item.py
utils/: ArchiveParseModels.py  LoginDataItem.py  cookies_utils.py  download_by_item.py  download_utils.py  get_debug_value.py  hitfile_utils.py  load_env_params.py  split_to_files.py  timeouts_utils.py  to_remove.filter_scraped_data_from_raw_format.py
