[tool.poetry]
name = "parser-gfxhub"
version = "0.1.0"
description = ""
authors = ["Suren <parsyansuren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
requests = "^2.32.2"
httpx = "^0.27.0"
selenium = "^4.22.0"
playwright = "^1.45.0"
webdriver-manager = "^4.0.1"
pydantic = "^2.8.2"
loguru = "^0.7.2"
tqdm = "^4.66.4"
wget = "^3.2"
tenacity = "^9.0.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
